tests/errors/meta-function-decl-expression-site.ari
meta fn make_decl(input: ast) -> ast {
  return decl!(fn generated_value() -> i64 {
    return 42;
  });
}

fn main() -> i64 {
  return make_decl!(1);
}
